# backend-challenge

./: .gitignore  README.md  departments.json
app/: Dockerfile  Makefile  README.md  pyproject.toml
app/app/: config.py  main.py
app/app/services/: department.py  govdata.py  utils.py
app/app/templates/: departments.html
app/tests/: test_utils.py
