[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Bogdan Ciobotaru (bciobo) <bogdan.ciobotaru1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.83.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
