[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Bogdan Ciobotaru (bciobo) <bogdan.ciobotaru1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.83.0"}
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
requests = "^2.28.1"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
